@@ -288,52 +288,4 @@ use_32bit_integer()
 #endif
 
 
-'====================================== GOSUB Hack ========================================
-
-#if __FB_GCC__ = 0
-'use nearly-as-fast assembly version (one extra jump)
-
-#undef gosub
-#define gosub _gosub_beta(__LINE__,__FUNCTION_NQ__)
-'The "if 0 then" is used to place a label after the goto (the goto label occurs afterwards)
-'We subtract 12 from esp to perserve 16-byte stack alignment, in case it is required
-'(eg Linux i386/x86_64)
-#macro _gosub_beta(a,b)
-  asm
-    sub esp, 12
-    call gosub_##b##_line_##a
-    add esp, 12
-  end asm
-  if 0 then asm : gosub_##b##_line_##a: end asm : goto
-#endmacro
-#define retrace asm ret
-#define crt_jmp_buf byte
-
-#else  'choose GOSUB workaround
-
-'alternative to above blocks, use this code on non x86 platforms
-'use a setjmp/longjmp kludge
-
-'#include "crt/setjmp.bi"
-#define __crt_setjmp_bi__   'Don't allow crt/setjmp.bi to be included
-
-' setjmp.bi is incorrect (on OSX anyway; actual size is 148 bytes on 64 bit OSX)
-' 64 bit windows uses a 256byte buffer.
-type crt_jmp_buf:dummy(255) as byte:end type
-#ifdef __FB_WIN32__
-declare function setjmp cdecl alias "_setjmp" (byval as any ptr) as integer
-#else
-declare function setjmp cdecl alias "setjmp" (byval as any ptr) as integer
-#endif
-declare sub longjmp cdecl alias "longjmp" (byval as any ptr, byval as integer)
-
-extern gosubbuf(31) as crt_jmp_buf
-extern gosubptr as integer
-'option nokeyword gosub
-#undef gosub
-#define gosub if setjmp(@gosubbuf(gosubptr)) then gosubptr-=1 else gosubptr+=1:goto
-#define retrace longjmp(@gosubbuf(gosubptr-1),1)
-
-#endif  'choose GOSUB workaround
-
 #ENDIF
